--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -1,9 +1,9 @@
 {{#items}}
   {{#isArray}}
-    (data as List<dynamic>).map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
+    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
   {{/isArray}}
   {{#isMap}}
-    (data as List<dynamic>).map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
+    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
   {{/isMap}}
   {{^items}}
     {{#isEnum}}
