--- a/src/main/resources/dart2-v3template/_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_from_json.mustache
@@ -9,40 +9,40 @@
     {{enumName}}Extension.fromJson(data)
   {{/isEnum}}
   {{#isDateTime}}
-    {{#required}}{{#nullSafe}}
-      DateTime.parse(date!)
+    {{#vendorExtensions.x-not-nullable}}{{#nullSafe}}
+      DateTime.parse(data!)
     {{/nullSafe}}
     {{^nullSafe}}
-      data == null ? data : DateTime.parse(data)
+      data == null ? null : DateTime.parse(data)
     {{/nullSafe}}
-    {{/required}}
-    {{^required}}
-      data == null ? data : DateTime.parse(data)
-    {{/required}}
+    {{/vendorExtensions.x-not-nullable}}
+    {{^vendorExtensions.x-not-nullable}}
+      data == null ? null : DateTime.parse(data)
+    {{/vendorExtensions.x-not-nullable}}
   {{/isDateTime}}
   {{#isDate}}
-    {{#required}}{{#nullSafe}}
+    {{#vendorExtensions.x-not-nullable}}{{#nullSafe}}
       DateTime.parse(data! + 'T00:00:00.000Z')
     {{/nullSafe}}
     {{^nullSafe}}
-      data == null ? DateTime.parse(data + 'T00:00:00.000Z')
+      data == null ? null : DateTime.parse(data + 'T00:00:00.000Z')
     {{/nullSafe}}
-    {{/required}}
-    {{^required}}
-      data == null ? DateTime.parse(data + 'T00:00:00.000Z')
-    {{/required}}
+    {{/vendorExtensions.x-not-nullable}}
+    {{^vendorExtensions.x-not-nullable}}
+      data == null ? null : DateTime.parse(data + 'T00:00:00.000Z')
+    {{/vendorExtensions.x-not-nullable}}
   {{/isDate}}
   {{#isModel}}
-    {{#required}}{{#nullSafe}}
-      data == null ? {{{complexType}}}.fromJson(data)
+    {{#vendorExtensions.x-not-nullable}}{{#nullSafe}}
+      {{{complexType}}}.fromJson(data)
     {{/nullSafe}}
     {{^nullSafe}}
       data == null ? {{#defaultValue}}{{{defaultValue}}}{{/defaultValue}}{{^defaultValue}}null{{/defaultValue}} : {{{complexType}}}.fromJson(data)
     {{/nullSafe}}
-    {{/required}}
-    {{^required}}
+    {{/vendorExtensions.x-not-nullable}}
+    {{^vendorExtensions.x-not-nullable}}
       data == null ? {{#defaultValue}}{{{defaultValue}}}{{/defaultValue}}{{^defaultValue}}null{{/defaultValue}} : {{{complexType}}}.fromJson(data)
-    {{/required}}
+    {{/vendorExtensions.x-not-nullable}}
   {{/isModel}}
   {{#isPrimitiveType}}
     data as {{{dataType}}}
