--- a/src/main/resources/dart2-v3template/_map_copy.mustache
+++ b/src/main/resources/dart2-v3template/_map_copy.mustache
@@ -1,25 +1,11 @@
 {{#items}}
   {{#isMap}}
-    (data as Map).cast<String, dynamic{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, dynamic{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{dataType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, (dynamic data) { return {{>_copy}}; }(data) ))
+    data{{^required}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/required}}.map((String key, {{{vendorExtensions.x-innerType}}} data) => MapEntry<String, {{{vendorExtensions.x-innerType}}}>(key, (dynamic data) { return {{>_copy}}; }(data) ))
   {{/isMap}}
   {{#isArray}}
-    (data as Map).cast<String, dynamic{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, dynamic{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{dataType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, (dynamic data) { return {{>_copy}}; }(data) ))
+    data{{^required}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/required}}.map((String key, {{{vendorExtensions.x-innerType}}} data) => MapEntry<String, {{{vendorExtensions.x-innerType}}}>(key, ({{{vendorExtensions.x-innerType}}} data) { return {{>_copy}}; }(data) ))
   {{/isArray}}
   {{^items}}
-    {{#isEnum}}
-      (data as Map).cast<String, {{{enumName}}}>().map((String key, {{{enumName}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{enumName}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, {{>_copy}} ))
-    {{/isEnum}}
-    {{#isDateTime}}
-      (data as Map).cast<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, {{>_copy}} ))
-    {{/isDateTime}}
-    {{#isDate}}
-      (data as Map).cast<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, {{>_copy}} ))
-    {{/isDate}}
-    {{#isModel}}
-      (data as Map).cast<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{complexType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, {{>_copy}} ))
-    {{/isModel}}
-    {{#isPrimitiveType}}
-      (data as Map).cast<String, {{{dataType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>().map((String key, {{{dataType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}} data) => MapEntry<String, {{{dataType}}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}>(key, data))
-    {{/isPrimitiveType}}
+    data{{^required}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/required}}.map((String key, {{{vendorExtensions.x-innerType}}} data) => MapEntry<String, {{{vendorExtensions.x-innerType}}}>(key, {{>_copy}} ))
   {{/items}}
 {{/items}}
