--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -16,8 +16,10 @@ environment:
 {{/nullSafe}}
 dependencies:
 {{#nullSafe}}
-  dio: '4.0.0'
-  openapi_dart_common: ^4.0.0
+  dio: '^4.0.0'
+#  openapi_dart_common: ^4.0.0
+  openapi_dart_common:
+    path: /Users/richard/projects/dart/openapi_dart_common
   collection: '^1.15.0'
 {{/nullSafe}}
 {{^nullSafe}}
