--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -24,7 +24,9 @@ dependencies:
 {{/nullSafe}}
 {{^nullSafe}}
   dio: '>=3.0.10 <4.0.0'
-  openapi_dart_common: ^3.2.0
+#  openapi_dart_common: ^3.2.0
+  openapi_dart_common:
+    path: /Users/richard/projects/dart/openapi_dart_common_3x
   collection: ^1.14.11
 {{/nullSafe}}
   {{#x-dart-deps}}
