--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -17,16 +17,16 @@ environment:
 dependencies:
 {{#nullSafe}}
   dio: '^4.0.0'
-#  openapi_dart_common: ^4.0.0
-  openapi_dart_common:
-    path: /Users/richard/projects/dart/openapi_dart_common
+  openapi_dart_common: ^4.1.0
+#  openapi_dart_common:
+#    path: /Users/richard/projects/dart/openapi_dart_common
   collection: '^1.15.0'
 {{/nullSafe}}
 {{^nullSafe}}
   dio: '>=3.0.10 <4.0.0'
-#  openapi_dart_common: ^3.2.0
-  openapi_dart_common:
-    path: /Users/richard/projects/dart/openapi_dart_common_3x
+  openapi_dart_common: ^3.2.0
+#  openapi_dart_common:
+#    path: /Users/richard/projects/dart/openapi_dart_common_3x
   collection: ^1.14.11
 {{/nullSafe}}
   {{#x-dart-deps}}
